# snakemake-executor-plugin-pbs

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_executor_plugin_pbs/: __init__.py
tests/: tests.py
